rest of the files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,50 @@
 
 .idea/
 .ipynb_checkpoints/
+/_dt=2018-02-01-00-07/
+/_dt=2018-02-01-00-11/
+/_dt=2018-02-07-03-18/
+/_dt=2018-02-09-04-54/
+/_dt=2018-02-11-05-50/
+/6492bd1d-3e52-4bf7-9913-13600d8bb9f8
+/8bedb1f7-9f80-492f-810b-5c7e04ba5bdd
+/Boto3_Kinesis.ipynb
+/activate.log
+/amazon-redshift-utils-master.zip
+/ao.json
+/bucketlist.txt
+/cf4a157c-832e-4ef3-93a5-e4183e136463
+/customersales.gz
+/customersales.txt
+/customersales_to_sort.txt
+/deactivate.log
+/decoded
+/e6db6908-84f0-48b5-a0c5-e37cb3fe710f
+/EMAO2019614N.csv
+/filter_log_event.out
+/filter_log_events.log
+/filter_log_events_sample
+/filter_log_events_sample_small
+/lock
+/locktest.lock
+/missing_barcodes
+/modern-1-url.txt
+/orderline_record_factory.tar.gz
+/ProductSearch_RLA-MCA-Single-SessionFINAL.json
+/r1
+/seatstatus_to_sort.txt
+/vista_pivot.csv
+/vista_pivot.json
+/vista_sort.csv
+/vista_sort.json
+/vista_sort1.json
+/py_ve/
+/django-projects/
+/customersales-2018-02-14-new/
+/falcon_venv/
+/seatstatus-2018-02-14/
+/serverless-etl-pipeline/
+/StatsService/Terraform/.terraform/
+/amazon-redshift-utils/
+/snowpipe/
+/bulkreturn.py
